--- a/src/TrustedSigning/TrustedSigning/TrustedSigning.csproj
+++ b/src/TrustedSigning/TrustedSigning/TrustedSigning.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="$(MSBuildThisFileDirectory)..\..\Az.props" />
   <Import Project="$(MSBuildThisFileDirectory)..\..\psm1.props" />
@@ -15,9 +15,35 @@
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <OutputPath>$(RepoArtifacts)$(Configuration)\Az.$(PsModuleName)\</OutputPath>
     <PublishDir>$(OutputPath)</PublishDir>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <OutputType>Library</OutputType>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;CS0214;</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>1701;1702;CS0214;</NoWarn>
+  </PropertyGroup>
+  
   <!-- Assets -->
+  <ItemGroup>
+    <PackageReference Include="Polly" Version="7.2.4" />
+    <PackageReference Include="Azure.Developer.TrustedSigning.CryptoProvider" Version="0.1.38" />
+    <PackageReference Include="Azure.CodeSigning.Sdk" Version="0.1.127" />
+    <PackageReference Include="System.Formats.Asn1" Version="6.0.1" />
+    <PackageReference Include="System.Security.Cryptography.Pkcs" Version="6.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+    </Compile>
+  </ItemGroup>
+
   <ItemGroup>
     <None Update="Az.$(PsModuleName).psd1" CopyToOutputDirectory="PreserveNewest" />
     <None Update="help\*.md" CopyToOutputDirectory="PreserveNewest" />
